--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,18 +4,27 @@
   align-items: flex-end;
   padding: calc(16px + ((100vw - 320px) / 37.3)) 0 0 0;
   width: 90%;
-  max-width: 1184px;
+  max-width: 720px;
   margin: 0 auto 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .header{
+    width: calc(432px + 100vw - 480px);
+  }
 }
 
 @media screen and (min-width: 768px) {
   .header{
+	width: calc(720px + 100vw - 768px);
+	max-width: 928px;
     padding: 28px 0 0 0;
   }
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1024px) {
   .header{
-    width: calc(864px + 100vw - 960px);
+    width: calc(928px + 100vw - 1024px);
+	max-width: 1184px;
   }
 }
