--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,22 @@
 .intro__text{
   margin: 0 0 34px 0;
   padding: 0;
-  max-width: 690px;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+  .intro__text{
+	max-width: calc(720px - ((100vw - 768px) / 8.53));
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__text{
+	max-width: 690px;
+  }
 }
