--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,11 +1,26 @@
 .intro{
   width: 90%;
-  max-width: 984px;
+  max-width: 720px;
   margin: calc(64px + ((100vw - 320px) / 17.23)) auto 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .intro{
+    width: calc(432px + 100vw - 480px);
+  }
 }
 
 @media screen and (min-width: 768px) {
   .intro{
+	width: calc(720px + 100vw - 768px);
+	max-width: 928px;
     margin: 90px auto 0 auto;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro{
+	width: calc(928px + 100vw - 1024px);
+	max-width: 984px;
   }
 }
