--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,4 @@
 .photo-grid{
-  max-width: 1184px;
   width: 90%;
   margin: calc(64px + ((100vw - 320px) / 17.23)) auto 0 auto;
   display: grid;
@@ -7,14 +6,29 @@
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
 }
 
+@media screen and (min-width: 480px) {
+  .photo-grid{
+    width: calc(432px + 100vw - 480px);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .photo-grid{
     margin: 90px auto 0 auto;
+	width: calc(720px + 100vw - 768px);
+	max-width: 928px;
   }
 }
 
 @media screen and (min-width: 960px) {
   .photo-grid{
     width: calc(864px + 100vw - 960px);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .photo-grid{
+    width: calc(928px + 100vw - 1024px);
+	max-width: 1184px;
   }
 }
